# hot-proofs-blake3-circom

./: .mocharc.json  LICENSE.md  README.md  circuits.json  hardhat.config.ts  package.json  tsconfig.json
circuits/: blake3_common.circom  blake3_compression.circom  blake3_nova.circom
circuits/main/: blake3_compression.circom  blake3_nova.circom
circuits/test/: blake3_compression_test.circom
docs/: overview.md
rust_fold/: Cargo.toml  pyhelptest.py
rust_fold/examples/: main.rs
rust_fold/scripts/: main.rs
rust_fold/src/: blake3_circuit.rs  blake3_hash.rs  lib.rs  main.rs  main_old_2.rs  main_with_new_arecibo.rs  utils.rs
test/: blake3_compression.test.js  blake3_hash.test.ts  utils.ts  witness_gen.test.ts
test/blake3_utils/: README.md  compressions.js  util.js
test/test_circuits/: blake3_compression_test.circom
