[package]
name = "blake3_fold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arecibo = "0.1.1"
bellpepper-core = "0.4.0"
blake3 = "1.5.0"
circom-scotia = "0.2.0"
ff = "0.13.0"
nova-snark = "0.32.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
pasta_curves = "0.5.1"
